--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ serde_json = "1"
 tokio_wasi = { version = "1.25.0", features = ["rt", "macros"] }
 serde = { version = "1", features = ["derive"] }
 http_req_wasi = { version = "0.10", features = ["wasmedge_ssl"] }
+unicase = "2.6.0"
